<resources>
    <string name="app_name">RoomDataBaseProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="firstname">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="basic_details">Basic Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="educational_details">Educational Details</string>
    <string name="display_details">Display Screen</string>
    <string name="button">Button</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="college_name">College Name</string>
    <string name="university">University</string>
    <string name="percentage">Percentage</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="college">College</string>
    <string name="highest_qualification">Highest Qualification</string>
    <string name="alternate_phone">Alternate Phone</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>

</resources>