<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/whiteColor"
        tools:context="com.example.roomdatabaseproject.EductionDetailsFragment">


        <EditText
            android:id="@+id/editHighestQualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/highest_qualification"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="20dp"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editCollege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editHighestQualification"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/college"

            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editUniversity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editCollege"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/university"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"

            android:inputType="text"

            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editUniversity"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/percentage"
            android:imeOptions="actionNext"

            android:importantForAutofill="no"

            android:inputType="numberDecimal"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@+id/editPercentage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/border_back"
            android:text="@string/submit"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>