<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/whiteColor"
        android:imeOptions="actionNext"
        tools:context="com.example.roomdatabaseproject.ContactDetailsFragment">


        <EditText
            android:id="@+id/editAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_your_address"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:padding="20dp"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editAlternatePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/alternate_phone"
            android:importantForAutofill="no"
            android:inputType="textPhonetic"
            android:padding="20dp"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnNext2"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/editAlternatePhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_back"
            android:text="@string/next"
            android:textSize="16sp" />
    </RelativeLayout>
</layout>